# python_app_template

./: README.rst  cookiecutter.json
{{cookiecutter.project_name}}/: .pylintrc  DEVELOP.md  INSTALL.md  INSTALL.rst  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  pylama.ini  pytest.ini  requirements-development.txt  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/docs/: conf.py  index.rst  make.bat
{{cookiecutter.project_name}}/tests/: __init__.py  context.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  {{cookiecutter.project_main}}.py
