# Babel i18n configuration

[extract_messages]
keywords = _, gettext, ngettext
mapping_file = babel.cfg
width = 76
output_file = locales/{{cookiecutter.project_name}}.pot

[update_catalog]
output_dir = locales
input_file = locales/{{cookiecutter.project_name}}.pot

[compile_catalog]
directory = locales

[init_catalog]
input_file = locales/{{cookiecutter.project_name}}.pot
output_dir = locales

# Bumpversion configuration

[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'
